# fdroid-rs

./: Cargo.toml  README.md
.github/workflows/: check.yml  publish.yml
development/: .gitignore
development/test-resources/: org.woheller69.gpscockpit_240.apk
src/: aapt.rs  error.rs  lib.rs
src/repository/: app.rs  config.rs  metadata.rs  mod.rs  paths.rs  tests.rs
