[package]
name = "fdroid"
version = "0.1.1"
edition = "2021"
authors = ["Dominik Schwaiger <mail@dominik-schwaiger.ch>"]
description = "Create and Manipulate an fdroid repository"
license = "MIT"
readme = "README.md"
repository = "https://github.com/quiode/fdroid-rs"
homepage = "https://github.com/quiode/fdroid-rs"
documentation = "https://docs.rs/fdroid"
keywords = ["fdroid"]
exclude = [".github/*", "development/*", ".idea/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
regex = "1.9"
uuid = { version = "1.4", features = ["v4"] }
serde_json = "1.0"
itertools = "0.11"

[dev-dependencies]
pretty_assertions = "1"